--- a/IMDB Project Part 1.ipynb
+++ b/IMDB Project Part 1.ipynb
@@ -24,6 +24,7 @@
      "data": {
       "text/plain": [
        "['basics_filtered.csv',\n",
+       " 'ratings_filtered.csv',\n",
        " 'title-akas-us-only.csv',\n",
        " 'title.basics.tsv.gz',\n",
        " 'title.ratings.tsv.gz']"
@@ -995,7 +996,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gondr\\AppData\\Local\\Temp\\ipykernel_5636\\4241684825.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\gondr\\AppData\\Local\\Temp\\ipykernel_6488\\4241684825.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1159,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "7ccbd406-9837-4b38-8f22-b97b6a1156fb",
    "metadata": {},
    "outputs": [
