--- a/NLP_Analysis_of_Movie_Reviews.ipynb
+++ b/NLP_Analysis_of_Movie_Reviews.ipynb
@@ -707,7 +707,7 @@
    "id": "a355a32f-e658-4ad5-a704-5aecacb42e6b",
    "metadata": {},
    "source": [
-    "##### ngrams"
+    "#### ngrams"
    ]
   },
   {
@@ -1530,8 +1530,420 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "f10ce2ab-bde0-4329-8464-7f745c13af76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_table_bigrams = df_compare_bigrams.head(10).to_markdown(index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a379bdc4-5381-4d06-8dca-d5c24dfba8d2",
+   "metadata": {},
+   "source": [
+    "| ('High Rating Reviews', 'Words')   |   ('High Rating Reviews', 'Frequency') | ('Low Rating Reviews', 'Words')   |   ('Low Rating Reviews', 'Frequency') |\r\n",
+    "|:-----------------------------------|---------------------------------------:|:----------------------------------|--------------------------------------:|\r\n",
+    "| ('feel', 'like')                   |                            0.000816309 | ('feel', 'like')                  |                           0.00118231  |\r\n",
+    "| ('good', 'movie')                  |                            0.000730382 | ('final', 'rating')               |                           0.00112938  |\r\n",
+    "| ('watch', 'movie')                 |                            0.000644454 | ('rating', '★')                   |                           0.00112938  |\r\n",
+    "| ('good', 'film')                   |                            0.000537045 | ('★', '★')                        |                           0.00103232  |\r\n",
+    "| ('comic', 'book')                  |                            0.000494082 | ('finished', 'product')           |                           0.000847031 |\r\n",
+    "| ('action', 'movie')                |                            0.000458279 | ('look', 'like')                  |                           0.000847031 |\r\n",
+    "| ('movie', 'like')                  |                            0.000458279 | ('appeal', 'poor')                |                           0.000838208 |\r\n",
+    "| ('special', 'effect')              |                            0.000436797 | ('poor', 'finished')              |                           0.000838208 |\r\n",
+    "| ('like', 'movie')                  |                            0.000408154 | ('thing', 'appeal')               |                           0.000838208 |\r\n",
+    "| ('main', 'character')              |                            0.000408154 | ('★', 'thing')                    |                           0.000838208 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "984fa72d-f7f7-41b5-a219-78fbe5f342ec",
+   "metadata": {},
+   "source": [
+    "#### Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "caf80625-ced4-438f-9326-0e01a83315fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "613fb306-ee8f-4066-8492-ea8392132ced",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instantiate sia\n",
+    "sia = SentimentIntensityAnalyzer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1de1af76-eacd-40e7-a95c-223765d60397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add sentiment scores column by mapping sia\n",
+    "df['scores'] = df['review'].map(sia.polarity_scores)\n",
+    "\n",
+    "# save as variable (series)\n",
+    "scores = df['scores'].apply(pd.Series)\n",
+    "\n",
+    "# add columns to df\n",
+    "df = pd.concat([df, scores], axis=1).drop('scores', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e55703b4-f582-4858-8893-af48eb52f087",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>review</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rated</th>\n",
+       "      <th>tweet_token</th>\n",
+       "      <th>spacy_lemmas</th>\n",
+       "      <th>joined_token</th>\n",
+       "      <th>joined_lemmas</th>\n",
+       "      <th>neg</th>\n",
+       "      <th>neu</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>57086ff5c3a3681d29001512</td>\n",
+       "      <td>7443</td>\n",
+       "      <td>tt0120630</td>\n",
+       "      <td>Chicken Run</td>\n",
+       "      <td>a guilty pleasure for me personally, as i love both 'the great escape' and most of the works i have seen, over the years, from this rightfully-esteemed british animation company. highly recommended both for children and for adults who enjoy animation.</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>[a, guilty, pleasure, for, me, personally, ,, as, i, love, both, ', the, great, escape, ', and, most, of, the, works, i, have, seen, ,, over, the, years, ,, from, this, rightfully-esteemed, british, animation, company, ., highly, recommended, both, for, children, and, for, adults, who, enjoy, animation, .]</td>\n",
+       "      <td>[guilty, pleasure, personally, love, great, escape, work, see, year, rightfully, esteem, british, animation, company, highly, recommend, child, adult, enjoy, animation]</td>\n",
+       "      <td>a guilty pleasure for me personally , as i love both ' the great escape ' and most of the works i have seen , over the years , from this rightfully-esteemed british animation company . highly recommended both for children and for adults who enjoy animation .</td>\n",
+       "      <td>guilty pleasure personally love great escape work see year rightfully esteem british animation company highly recommend child adult enjoy animation</td>\n",
+       "      <td>0.053</td>\n",
+       "      <td>0.587</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.945</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  review_id  movie_id    imdb_id original_title  \\\n",
+       "0  57086ff5c3a3681d29001512      7443  tt0120630    Chicken Run   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                        review  \\\n",
+       "0  a guilty pleasure for me personally, as i love both 'the great escape' and most of the works i have seen, over the years, from this rightfully-esteemed british animation company. highly recommended both for children and for adults who enjoy animation.   \n",
+       "\n",
+       "   rating rated  \\\n",
+       "0     9.0  HIGH   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                           tweet_token  \\\n",
+       "0  [a, guilty, pleasure, for, me, personally, ,, as, i, love, both, ', the, great, escape, ', and, most, of, the, works, i, have, seen, ,, over, the, years, ,, from, this, rightfully-esteemed, british, animation, company, ., highly, recommended, both, for, children, and, for, adults, who, enjoy, animation, .]   \n",
+       "\n",
+       "                                                                                                                                                               spacy_lemmas  \\\n",
+       "0  [guilty, pleasure, personally, love, great, escape, work, see, year, rightfully, esteem, british, animation, company, highly, recommend, child, adult, enjoy, animation]   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                         joined_token  \\\n",
+       "0  a guilty pleasure for me personally , as i love both ' the great escape ' and most of the works i have seen , over the years , from this rightfully-esteemed british animation company . highly recommended both for children and for adults who enjoy animation .   \n",
+       "\n",
+       "                                                                                                                                         joined_lemmas  \\\n",
+       "0  guilty pleasure personally love great escape work see year rightfully esteem british animation company highly recommend child adult enjoy animation   \n",
+       "\n",
+       "     neg    neu   pos  compound  \n",
+       "0  0.053  0.587  0.36     0.945  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "2e1749be-7017-49fc-a1a2-91768e832019",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1634"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define filter for positive reviews\n",
+    "pos_sentiment_reviews = df['compound'] > 0\n",
+    "pos_sentiment_reviews.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "55e05b3b-352f-450c-845b-ec5906e0bc11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>rated</th>\n",
+       "      <th>compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>what a great cast for such a cheap film.\\r\\n\\r\\ndescription:\\r\\nthree college students base their class project around gossip and how fast it spreads, which soon spirals out of control.\\r\\n\\r\\nreview:\\r\\ngossip is a dramatic thriller that was made fifteen years too late. the story sounds like something that could have been believable in the 80's but not for the 2000s, rape kits and a thorough investigation solves the plot. it's pretty to look at and the cast is excellent but the rest of it is unbelievable.</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>0.8573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>pretty typical movie from the early aughts with attractive twenty-somethings in the leads and bland \"rock\" pop music, alongside an overly dramatic score. the acting is so-so at best and really bad story to go along with a laughable ending. led to two direct-to-video sequels that i'm really not too keen to revisit. **2.0/5**</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>0.6523</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             review  \\\n",
+       "19  what a great cast for such a cheap film.\\r\\n\\r\\ndescription:\\r\\nthree college students base their class project around gossip and how fast it spreads, which soon spirals out of control.\\r\\n\\r\\nreview:\\r\\ngossip is a dramatic thriller that was made fifteen years too late. the story sounds like something that could have been believable in the 80's but not for the 2000s, rape kits and a thorough investigation solves the plot. it's pretty to look at and the cast is excellent but the rest of it is unbelievable.   \n",
+       "32                                                                                                                                                                                            pretty typical movie from the early aughts with attractive twenty-somethings in the leads and bland \"rock\" pop music, alongside an overly dramatic score. the acting is so-so at best and really bad story to go along with a laughable ending. led to two direct-to-video sequels that i'm really not too keen to revisit. **2.0/5**   \n",
+       "\n",
+       "   rated  compound  \n",
+       "19   LOW    0.8573  \n",
+       "32   LOW    0.6523  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identify reviews with a positive sentiment score that received 1 star\n",
+    "filter_mismatch_A = (df['rated'] == 'LOW') & pos_sentiment_reviews\n",
+    "pos_sent_1_star = df.loc[filter_mismatch_A,['review','rated','compound']]\n",
+    "pos_sent_1_star.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "0c31a351-9826-4913-bd7f-466d3accc71d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>rated</th>\n",
+       "      <th>compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>one of those few movies that most people don't care for, but i personally think is **criminally** underrated.\\r\\n\\r\\n_final rating:★★★★½ - ridiculously strong appeal. i can’t stop thinking about it._</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>-0.3391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>dazzling björk in this indictment against the death sentence, in tight close-ups. this film is a ufo, musical without being.</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>-0.5574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                     review  \\\n",
+       "6   one of those few movies that most people don't care for, but i personally think is **criminally** underrated.\\r\\n\\r\\n_final rating:★★★★½ - ridiculously strong appeal. i can’t stop thinking about it._   \n",
+       "14                                                                             dazzling björk in this indictment against the death sentence, in tight close-ups. this film is a ufo, musical without being.   \n",
+       "\n",
+       "   rated  compound  \n",
+       "6   HIGH   -0.3391  \n",
+       "14  HIGH   -0.5574  "
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identify 5 star reviews with negative sentiment\n",
+    "filter_mismatch_B = (df['rated'] == 'HIGH') & ~pos_sentiment_reviews\n",
+    "df.loc[filter_mismatch_B,['review','rated','compound']].head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7573a6e2-7b6f-43bb-a277-545079273ca5",
+   "metadata": {},
+   "source": [
+    "##### Mismatch Observations: \n",
+    "- Positive Sentiment on low rated movies often refers to the actors doing well\n",
+    "- Negative Sentiment on positive rated movies often refer to the dark and serious subject matter of the movie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6406e22e-ea70-48d4-a1f1-7428bc877e1e",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd47ceba-d7d3-404c-a8f9-18e72ad073de",
+   "metadata": {},
+   "source": [
+    "##### List 3 things associated with high-rating reviews\r",
+    "- Movies with pre-existing franchise (superhero, comic book, etc.)\n",
+    "- Broad Appeal (kids/adults/etc.)\n",
+    "- Good Special Effects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dc927ab-a5af-4e08-b839-cf0bc321c4e0",
+   "metadata": {},
+   "source": [
+    "##### List 3 things associated with low-rating reviews\n",
+    "- Low Production Value\n",
+    "- Bad Plot / Script\n",
+    "- Boring (poor pacing?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f902d8a-cdc5-4e72-962d-8e6c7c74759b",
+   "metadata": {},
+   "source": [
+    "### Saving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "b404f7e8-d08c-4c94-b947-db5b4ed26cb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Data-NLP/df-proj-2-part-5.joblib']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "path = \"Data-NLP/df-proj-2-part-5.joblib\"\n",
+    "joblib.dump(df,path,compress = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67577380-53eb-4b42-af2d-382ebf18fa19",
    "metadata": {},
    "outputs": [],
    "source": []
