--- a/preparing_for_streamlit.ipynb
+++ b/preparing_for_streamlit.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "9a8810fb-dc03-4b0c-a43f-4659680a48ee",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
       "          'processed': 'Data-NLP/processed-reviews-hoover.joblib',\n",
       "          'tf': {'test_tf': 'Data-NLP/testing_tf',\n",
       "                 'train_tf': 'Data-NLP/training_tf'}},\n",
-      " 'models': {'ml': 'models/ml-pipe.joblib', 'nlp': 'models/nb-pipe.joblib'}}\n"
+      " 'models': {'ml': 'models/ml-pipe.joblib', 'nlp': 'models/tf/'}}\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
     "    },\n",
     "    models={\n",
     "        \"ml\": \"models/ml-pipe.joblib\", \n",
-    "        \"nlp\": \"models/nb-pipe.joblib\",\n",
+    "        \"nlp\": \"models/tf/\",\n",
     "    },\n",
     ")\n",
     "pprint(FPATHS)"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "9aeccbc2-376c-4f77-81b5-5c72e40a376e",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "id": "f450b412-ec20-482f-bff8-68725d628f83",
    "metadata": {},
    "outputs": [],
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "id": "812ce766-6f84-44df-b424-f9cd3d0db00d",
    "metadata": {},
    "outputs": [
@@ -1017,14 +1017,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: models/nb-pipe.joblib\\assets\n"
+      "INFO:tensorflow:Assets written to: models/tf/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: models/nb-pipe.joblib\\assets\n"
+      "INFO:tensorflow:Assets written to: models/tf/assets\n"
      ]
     }
    ],
